# stay_fly

./: .env  .env.example  .env.production  .env.template  .gitignore  Dockerfile  Dockerfile.prod  Makefile  OKX_SETUP_GUIDE.md  QUICKSTART.md  README.md  SETUP_REPORT.md  VERIFICATION_REPORT.txt  analysis_report_20250727_063845.md  analyze_repo.py  auto_discovery.py  complete_okx_trading.py  config.env  config.env.bak  convert_to_production.sh  deploy.sh  deploy_elite_mimic.py  deploy_production.sh  deploy_ultra_fast.sh  discord_notifications.py  discover_real_whales.py  docker-compose.prod.yml  docker-compose.yml  elite_mimic_orchestrator.py  elite_mirror_bot.py  enhanced_paper_trading.py  fix_dependencies.sh  go.sh  install_ml_dependencies.sh  integrate_all_changes.sh  issues_log.json  launch_legend.sh  main.py  main_ml_integration.py  monitor_real_trades.py  (+32 more)
backup_20250727_062354/: start.sh
backup_20250727_062354/core/: ml_brain.py
config/: production.env
config/production/: monitoring.yaml
config/security/: secrets.env  security.yaml
core/: Cargo.toml  abi_decoder.py  data_collector.py  fixed_mempool_scanner.py  master_coordinator.py  master_coordinator.py.bak  ml_brain.py  okx_live_engine.py  orchestrator.py  production_discovery.py  production_okx_engine.py  real_discovery.py  realtime_coordinator.py  ultra_fast_engine.py  websocket_engine.py  working_discovery.py
core/data/: crypto_history.db  discovery_summary.json  million_dollar_achievement.json  real_elite_wallets.json
data/: alpha_wallets.json  real_elite_wallets.json
grok/api/: grok_client.py
k8s/: deployment.yaml
monitoring/: alert_rules.yml  health_check.py  prometheus.yml
nginx/: nginx.prod.conf
nginx/ssl/: selfsigned.crt
python/analysis/: security.py  wallet_tracker.py
python/okx/: client.py
python/utils/: audit.py  config.py  logging.py  rate_limiter.py  validation.py
rust/: Cargo.toml
rust/src/: main.rs  mempool_scanner.rs  okx_dex_api.rs
rust/src/ml/: mod.rs
scripts/: complete_integration.py  discover_real_whales.py  enhanced_paper_trading.py
scripts/monitoring/: backup.sh  health_check.sh
scripts/prod/: 1_stop_simulation.sh  2_activate_real_apis.sh  3_enable_webhooks.sh  4_compress_repo.sh  5_warmup_trading.sh  6_verify_production.sh  7_instant_profits.sh  8_final_optimizer.sh
scripts/production/: start_production.py
scripts/security/: backup_system.sh  emergency_stop.sh  manage_keys.sh  manage_ssl.sh  monitor_security.sh  (+1 more)
tests/: test_comprehensive.py
(+9 files in other folders)
