[package]
name = "mimic-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "mimic_engine"
crate-type = ["cdylib", "rlib"]

[dependencies]
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
tokio-tungstenite = "0.20"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
web3 = "0.19"
ethabi = "18.0"
hex = "0.4"
sha3 = "0.10"
blake3 = "1.4"
rayon = "1.7"
dashmap = "5.5"
crossbeam = "0.8"
parking_lot = "0.12"
ahash = "0.8"
smallvec = "1.11"
bytes = "1.4"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1.18"
env_logger = "0.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
rust_decimal = "1.31"
ring = "0.16"
base64 = "0.21"
lru = "0.11"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
overflow-checks = false

[profile.dev]
opt-level = 1
debug = true