[package]
name = "alpha-mirror"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers = "2.0"
reqwest = { version = "0.11", features = ["json"] }
futures-util = "0.3"
parking_lot = "0.12"
rayon = "1.7"
dashmap = "5.5"
crossbeam = "0.8"
lru = "0.12"
blake3 = "1.5"
ring = "0.17"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

# Additional production dependencies
[dependencies.tokio-tungstenite]
version = "0.20"
features = ["native-tls"]

[dependencies.web3]
version = "0.19"
features = ["http", "ws"]

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["sink", "std"]
