[package]
name = "elite-mirror-ml"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
candle-core = "0.3"
candle-nn = "0.3"
candle-transformers = "0.3"
tch = "0.13"
ndarray = "0.15"
linfa = "0.7"
linfa-trees = "0.7"
smartcore = "0.3"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
web3 = "0.19"

[features]
cuda = ["candle-core/cuda", "tch/cuda"]
metal = ["candle-core/metal"]
